Setup-Jenkins-slave-with-Kubernetes/jenkins/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 32000
    - name: jnlp
      port: 50000
      targetPort: 50000
  selector:
    app: jenkins
